# Embedded-Linux

v4l2_test/: CMA_EXPLANATION.md  CMakeLists.txt  DMA_BUF_QUICK_REF.md  Makefile  PREALLOC_GUIDE.md  QUICKSTART.md  README.md  build.sh  dmabuf_usage_example.c  install_opencv.sh  v4l2_capture.cpp  v4l2_dma_buf  v4l2_dma_buf.c  v4l2_mmap  v4l2_mmap.c  v4l2_sample.c
